--- a/main.html
+++ b/main.html
@@ -434,7 +434,7 @@
 <body>
     <div class="container">
         <header class="hero">
-            <img src="logo-psk-removebg-preview.png" alt="PSK Steuerberatung Logo" class="logo-image">
+            <img src="./logo-psk-removebg-preview.png" alt="PSK Steuerberatung Logo" class="logo-image">
             <h1>Steuerersparnis-Analyse</h1>
             <p>Berechnen Sie Ihr individuelles Steueroptimierungspotenzial</p>
         </header>
@@ -567,7 +567,7 @@
                         <button class="btn-main btn-secondary"
                             onclick="window.open('https://steuerberatung-psk.com/', '_blank')">🌐 Zur Website</button>
                         <button class="btn-main btn-normal"
-                            onclick="window.open('https://calendly.com/simon-steuerberater-psk/erstgesprach', '_blank')">Termin
+                            onclick="window.open('https://calendly.com/simon-steuerberater-psk/erstgesprach-steuerberatung-psk', '_blank')">Termin
                             Buchen</button>
                     </div>
                 </div>
