--- a/main.html
+++ b/main.html
@@ -77,8 +77,8 @@
         .logo-image {
             width: 250px;
             margin-bottom: 1.5rem;
-            /* Filtro para hacer el logo blanco sobre fondo oscuro */
-            filter: brightness(0) invert(1);
+            /* Filtro para hacer el logo blanco sobre fondo oscuro 
+            filter: brightness(0) invert(1);*/
         }
 
         /* Input Cards */
@@ -434,7 +434,8 @@
 <body>
     <div class="container">
         <header class="hero">
-            <img src="./logo-psk-removebg-preview.png" alt="PSK Steuerberatung Logo" class="logo-image">
+                       <img src="https://agi-prod-file-upload-public-main-use1.s3.amazonaws.com/38161de9-7456-47f1-8d17-0407a4bad653?thumb=400x400" alt="PSK Steuerberatung Logo" class="logo-image">
+
             <h1>Steuerersparnis-Analyse</h1>
             <p>Berechnen Sie Ihr individuelles Steueroptimierungspotenzial</p>
         </header>
@@ -956,3 +957,4 @@
 </body>
 
 </html>
+
