--- a/main.html
+++ b/main.html
@@ -77,8 +77,8 @@
         .logo-image {
             width: 250px;
             margin-bottom: 1.5rem;
-            /* Filtro para hacer el logo blanco sobre fondo oscuro 
-            filter: brightness(0) invert(1);*/
+            /* Filtro para hacer el logo blanco sobre fondo oscuro*/
+            filter: brightness(0) invert(1);
         }
 
         /* Input Cards */
@@ -958,5 +958,6 @@
 </body>
 
 </html>
+
 
 
