--- a/main.html
+++ b/main.html
@@ -107,6 +107,7 @@
 
         input,
         select {
+            height:auto;
             width: 100%;
             padding: 12px;
             border: 2px solid #E0E0E0;
@@ -958,6 +959,7 @@
 </body>
 
 </html>
+
 
 
 
